fix scrollbars and some mobile views

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,17 +1,19 @@
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   padding: 0;
   min-width: 100vw;
-  max-width: 100vw;
   min-height: 100vh;
   background-color: #2f2f2f;
   color: #f5f5f5;
   font-family: "Droid Sans", sans-serif;
+}
 
-  main {
-    margin: 0;
-    padding: 0;
-    width: 100vw;
-    height: 100vh;
-  }
+#app {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  min-width: 100vw;
 }
